# ultra_llm_wiki

./: .env.example  .gitignore  README.md  docker-compose.yml  mcp.json.example
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: documents.py  relations.py  search.py  tasks.py  upload.py
backend/app/core/: embedding.py  function_analyzer.py  ingest.py  relation_discovery.py  storage.py  task_manager.py
backend/app/db/: base.py
backend/app/mcp_server/: __main__.py  server.py
backend/app/models/: document.py  schemas.py
backend/app/parsers/: __init__.py  base.py  code_parser.py  markdown_parser.py  pdf_parser.py  schematic_parser.py
backend/tests/: test_api.py  test_models.py  test_parsers.py
nginx/: nginx.conf
scripts/: Dockerfile.postgres  import_data.py  init_chinese_fts.sql  init_db.sql  start.sh
web/: Dockerfile  next.config.js  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/[id]/: page.tsx
web/app/graph/: page.tsx
web/app/search/: page.tsx
web/app/upload/: page.tsx
web/lib/: api.ts
